try confg